--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -1,7 +1,7 @@
 <main class="mainpage"
       id="content">
     <div class="mb-5">
-        <carousel [interval]="50000"
+        <carousel [interval]="5000"
                   [pauseOnFocus]="true"
                   [isAnimated]="true">
             <slide *ngIf="config.modules.includes('bodenrichtwerte')">
@@ -75,11 +75,10 @@
                 <div class="carousel-caption text-center py-2 py-md-3 my-4 my-md-5">
                     <h2>
                         <span style="color: #343a40;">Formulare</span>
-                        <span style="color: #c4153a;">.NI</span>
                     </h2>
                     <div class="lead text-dark">
                         <h3 class="h5"
-                            i18n>Online Formulare</h3>
+                            i18n>Online Formular Service</h3>
                         <p>Nulla vitae elit libero, a pharetra augue mollis interdum. </p>
                         <a class="btn btn-primary"
                            [routerLink]="['/forms']"
@@ -94,8 +93,9 @@
                      alt="Feedback"
                      class="carousel-image">
                 <div class="carousel-caption text-center py-2 py-md-3 my-4 my-md-5">
-                    <h2 style="color: #343a40;"
-                        i18n>FEEDBACK</h2>
+                    <h2>
+                        <span style="color: #343a40;">Feedback</span>
+                    </h2>
                     <div class="lead text-dark">
                         <h3 class="h5"
                             i18n>Fehler oder Vorschlag einreichen</h3>
@@ -150,8 +150,46 @@
         <hr class="my-5">
 
         <div class="row"
-             *ngIf="config.modules.includes('immobilienpreisindex')">
+             *ngIf="config.modules.includes('bodenwertkalkulator')">
             <div class="col-md-7 order-md-2">
+                <a class="h2"
+                   [routerLink]="['/bodenwertkalkulator']"
+                   i18n>
+                    <span style="color: #343a40;">BOWERT</span>
+                    <span style="color: #c4153a;">.NI</span>
+                </a>
+                <div class="lead">
+                    <h3 class="h5 text-break"
+                        i18n>Bodenwertkalkulator Niedersachsen</h3>
+                    <p class="text-justify"
+                       i18n>Die Gutachterausschüsse und der Obere Gutachterausschuss für
+                        Grundstückswerte in Niedersachsen und Bremen stellen interessierten Nutzern unter BORIS.NI
+                        Bodenrichtwerte für Bauland und für Flächen der Land- und Forstwirtschaft in Niedersachsen,
+                        Bremen und Bremerhaven zur Verfügung.</p>
+                </div>
+            </div>
+            <div class="col-md-5"
+                 aria-hidden="true">
+                <a class="h2"
+                   [routerLink]="['/bodenrichtwerte']"
+                   i18n-title
+                   title="Bodenrichtwerte"
+                   tabindex="-1">
+                    <img src="./assets/bowert.png"
+                         class="img-thumbnail img-fluid mx-auto"
+                         width="500"
+                         height="500"
+                         i18n-alt
+                         alt="Bodenrichtwerte">
+                </a>
+            </div>
+        </div>
+
+        <hr class="my-5">
+
+        <div class="row"
+             *ngIf="config.modules.includes('immobilienpreisindex')">
+            <div class="col-md-7">
                 <a class="h2"
                    [routerLink]="['/immobilienpreisindex']"
                    i18n>
@@ -190,12 +228,11 @@
 
         <div class="row"
              *ngIf="config.modules.includes('forms')">
-            <div class="col-md-7">
+            <div class="col-md-7 order-md-2">
                 <a class="h2"
                    [routerLink]="['/forms']"
                    i18n>
                     <span style="color: #343a40;">Formulare</span>
-                    <span style="color: #c4153a;">.NI</span>
                 </a>
                 <div class="lead">
                     <h3 class="h5 text-break"
