Added BOWERT.NI to start page

--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -171,16 +171,16 @@
             <div class="col-md-5"
                  aria-hidden="true">
                 <a class="h2"
-                   [routerLink]="['/bodenrichtwerte']"
+                   [routerLink]="['/bodenwertkalkulator']"
                    i18n-title
-                   title="Bodenrichtwerte"
+                   title="Bodenwertkalkulator"
                    tabindex="-1">
                     <img src="./assets/bowert.png"
                          class="img-thumbnail img-fluid mx-auto"
                          width="500"
                          height="500"
                          i18n-alt
-                         alt="Bodenrichtwerte">
+                         alt="Bodenwertkalkulator">
                 </a>
             </div>
         </div>
