--- a/power/src/app/gmb/gmb/gmb.component.html
+++ b/power/src/app/gmb/gmb/gmb.component.html
@@ -11,19 +11,20 @@
     <div *ngFor="let rd of berichte | keyvalue" class="card m-0 mb-2" role="table">
         <div class="card-header">
             <div class="row">
-                <h5 class="col-md-5 mb-0"
+                <h5 class="col-md-12 mb-0"
                     role="rowheader"><b>{{rd.key}}</b>
                 </h5>
-                <h5 class="col-md-7 mb-0"
-                    role="cell"><!--(bis 2012)-->
-                </h5>
+                <!--<h5 class="col-md-7 mb-0"
+                    role="cell">(bis 2012)
+                </h5>-->
             </div>
         </div>
         <div class="card-body">
             <dl *ngFor="let bj of rd.value | keyvalue" class="row" role="rowgroup">
-                <!-- Bodenrichtwert (brz) -->
-                <input type="checkbox" id="dl{{bj.value['checksum']['md5']}}" role="button">
-                <dt class="col-md-12" role="rowheader">
+                <div class="col-md-12">
+                    <!-- Bodenrichtwert (brz) -->
+                    <input type="checkbox" id="dl{{bj.value['checksum']['md5']}}">
+                    <dt class="col-md-12" role="rowheader">
                     <label for="dl{{bj.value['checksum']['md5']}}">
                         <i-bs name="plusCircle" class="remove-check"></i-bs>
                         <i-bs name="dashCircle" class="display-check"></i-bs>&nbsp;
@@ -31,9 +32,9 @@
                         <ng-template #gmb i18n>Grundstücksmarktbericht</ng-template>
                         {{bj.key}}
                     </label>
-                </dt>
-                <dd class="col-md-12 fileinfo display-check" role="cell">
-                <i-bs name="download"></i-bs> {{bj.value['file']}} (<a href="{{downloadPath}}/{{bj.value['fileurl']}}" i18n>Downlaod</a>)<br>
+                    </dt>
+                    <dd class="col-md-12 fileinfo display-check" role="cell">
+                    <i-bs name="download"></i-bs> {{bj.value['file']}} (<a href="{{downloadPath}}/{{bj.value['fileurl']}}" i18n>Downlaod</a>)<br>
                     <small>
                         <ng-container i18n>Bereiche</ng-container>: {{bj.value['bereich']}}
                     </small>
@@ -43,7 +44,8 @@
                         SHA1: {{bj.value['checksum']['sha1']}}<br>
                         SHA256: {{bj.value['checksum']['sha256']}}
                     </small>
-                </dd>
+                    </dd>
+                </div>
             </dl>
         </div>
     </div>
